--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,9 +9,9 @@ branches:
 build: off  # будем использовать свой скрипт сборки
 
 install:
-  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-mbank.jar &
+  # запускаем SUT (запоминаем информацию о процессе в переменной $App)
+  - java -jar ./artifacts/app-order.jar &
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test --info
